--- a/Lab/Lab 9/lab09.rmd
+++ b/Lab/Lab 9/lab09.rmd
@@ -7,16 +7,29 @@ output:
     df_print: paged
 ---
 
-
 # SVM Lab
 
-We will use the ``e1071`` library in ``R`` to demonstrate the support vector classifier and the SVM.  Another option is the ``LiblinearR`` library, which is useful for very large linear problems.
+We will use the `e1071` library in `R` to demonstrate the support vector
+classifier and the SVM. Another option is the `LiblinearR` library, which is
+useful for very large linear problems.
 
 ## 9.1 Support Vector Classifier
 
-The ``e1071`` library contains implementations for a number of statistical learning methods.  In particular, the ``svm()`` function can be used to fit a support vector classifier when the argument ``kernel = "linear"`` is used.  This function uses a slightly different formulation for the support vector classifier than the text.  A ``cost`` argument allows us to specify the cost of a violation to the margin.  When the ``cost`` argument is small, then the margins will be wide and many support vectors will be on the margin or will violate the margin.  When the ``cost`` argument is large, then the margins will be narrow and there will be few support vectors on the margin or violating the margin.
+The `e1071` library contains implementations for a number of statistical
+learning methods. In particular, the `svm()` function can be used to fit a
+support vector classifier when the argument `kernel = "linear"` is used. This
+function uses a slightly different formulation for the support vector classifier
+than the text. A `cost` argument allows us to specify the cost of a violation to
+the margin. When the `cost` argument is small, then the margins will be wide and
+many support vectors will be on the margin or will violate the margin. When the
+`cost` argument is large, then the margins will be narrow and there will be few
+support vectors on the margin or violating the margin.
 
-We now use the ``svm()`` function to fit the support vector classifier for a given value of the ``cost`` parameter.  Here we demonstrate the use of this function on a two-dimensional example so that we can plot the resulting decision boundary.  We begin by generating the observations, which belong to two classes, and checking whether the classes are linearly separable. 
+We now use the `svm()` function to fit the support vector classifier for a given
+value of the `cost` parameter. Here we demonstrate the use of this function on a
+two-dimensional example so that we can plot the resulting decision boundary. We
+begin by generating the observations, which belong to two classes, and checking
+whether the classes are linearly separable.
 
 ```{r}
 set.seed(1)
@@ -26,7 +39,11 @@ x[y==1,] = x[y==1,] + 1
 plot(x, col = (3-y))
 ```
 
-These points are not linearly separable.  Next, we fit the support vector classifier.  Note that in order for the ``svm()`` function to perform classification (as opposed to SVM-based regression), we must encode the response as a factor variable. We now create a data frame with the response coded as a factor.
+These points are not linearly separable. Next, we fit the support vector
+classifier. Note that in order for the `svm()` function to perform
+classification (as opposed to SVM-based regression), we must encode the response
+as a factor variable. We now create a data frame with the response coded as a
+factor.
 
 ```{r}
 dat <- data.frame(x = x, y = as.factor(y))
@@ -35,8 +52,9 @@ svmfit <- svm(y ~ ., data = dat, kernel = "linear", cost = 10,
               scale = FALSE)
 ```
 
-
-The argument ``scale = FALSE`` tells the ``svm()`` function not to scale each feature to have mean zero or standard deviation one; depending on the application, one might prefer to use ``scale = TRUE``.  
+The argument `scale = FALSE` tells the `svm()` function not to scale each
+feature to have mean zero or standard deviation one; depending on the
+application, one might prefer to use `scale = TRUE`.
 
 We can now plot the support vector classifier obtained:
 
@@ -44,21 +62,35 @@ We can now plot the support vector classifier obtained:
 plot(svmfit, dat)
 ```
 
-Note that the two arguments to the ``plot()`` function are the output of the call to ``svm()`` and the data used in the call to ``svm()``. The region of feature space that will be assigned to the $-1$ class is shown in yellow and the region that will be assigned to the $+1$ class is shown in dark red.  The decision boundary between the two classes is linear (since we used the argument ``kernel = "linear"``), though due to the way in which the plotting function is implemented in this library the decision boundary looks jagged in the plot.  We see that in this case only one observation is misclassified. (Note that here the second feature is plotted on the x-axis and the first feature is plotted on the y-axis, in contrast to the usual behavior of ``plot()``). The support vectors are plotted as crosses and the remaining observations are plotted as circles; we see here that there are seven support vectors.  We can determine their identities as follows:
+Note that the two arguments to the `plot()` function are the output of the call
+to `svm()` and the data used in the call to `svm()`. The region of feature space
+that will be assigned to the $-1$ class is shown in yellow and the region that
+will be assigned to the $+1$ class is shown in dark red. The decision boundary
+between the two classes is linear (since we used the argument
+`kernel = "linear"`), though due to the way in which the plotting function is
+implemented in this library the decision boundary looks jagged in the plot. We
+see that in this case only one observation is misclassified. (Note that here the
+second feature is plotted on the x-axis and the first feature is plotted on the
+y-axis, in contrast to the usual behavior of `plot()`). The support vectors are
+plotted as crosses and the remaining observations are plotted as circles; we see
+here that there are seven support vectors. We can determine their identities as
+follows:
 
 ```{r}
 svmfit$index
 ```
 
-We can also obtain some basic information about the support vector classifier fit using the ``summary()`` command:
+We can also obtain some basic information about the support vector classifier
+fit using the `summary()` command:
 
 ```{r}
 summary(svmfit)
 ```
 
-This tells us, for instance, that a linear kernel was used with ``cost = 10``, and that there were seven support vectors, four in one class and three in the other.
+This tells us, for instance, that a linear kernel was used with `cost = 10`, and
+that there were seven support vectors, four in one class and three in the other.
 
-What if we instead used a smaller value of the cost parameter? 
+What if we instead used a smaller value of the cost parameter?
 
 ```{r}
 svmfit <- svm(y ~ ., data = dat, kernel = "linear", 
@@ -67,9 +99,18 @@ plot(svmfit, dat)
 svmfit$index
 ```
 
-Now that a smaller value of the cost parameter is being used, we obtain a larger number of support vectors, because the margin is now wider. Unfortunately, the ``svm()`` function does not explicitly output the coefficients of the linear decision boundary obtained when the support vector classifier is fit, nor does it output the width of the margin.
+Now that a smaller value of the cost parameter is being used, we obtain a larger
+number of support vectors, because the margin is now wider. Unfortunately, the
+`svm()` function does not explicitly output the coefficients of the linear
+decision boundary obtained when the support vector classifier is fit, nor does
+it output the width of the margin.
 
-The ``e1071`` library includes a built-in function, ``tune()``, to perform cross-validation.  By default, ``tune()`` performs ten-fold cross-validation on a set of models of interest.  In order to use this function, we pass in relevant information about the set of models that are under consideration. The following command indicates that we want to compare SVMs with a linear kernel, using a range of values of the ``cost`` parameter.
+The `e1071` library includes a built-in function, `tune()`, to perform
+cross-validation. By default, `tune()` performs ten-fold cross-validation on a
+set of models of interest. In order to use this function, we pass in relevant
+information about the set of models that are under consideration. The following
+command indicates that we want to compare SVMs with a linear kernel, using a
+range of values of the `cost` parameter.
 
 ```{r}
 set.seed(1)
@@ -78,39 +119,43 @@ tune.out <- tune(svm, y ~ ., data = dat, kernel = "linear",
                                         1, 5, 10, 100)))
 ```
 
-We can easily access the cross-validation errors for each of these models using the ``summary()`` command:
+We can easily access the cross-validation errors for each of these models using
+the `summary()` command:
 
 ```{r}
 summary(tune.out)
 ```
 
-We see that ``cost = 0.1`` results in the lowest cross-validation error rate.  The ``tune()`` function stores the best model obtained, which can be accessed as follows:
+We see that `cost = 0.1` results in the lowest cross-validation error rate. The
+`tune()` function stores the best model obtained, which can be accessed as
+follows:
 
 ```{r}
 bestmod <- tune.out$best.model
 summary(bestmod)
 ```
 
-The ``predict()`` function can be used to predict the class label on a set of test observations, at any given value of the cost parameter.  We begin by generating a test data set.
+The `predict()` function can be used to predict the class label on a set of test
+observations, at any given value of the cost parameter. We begin by generating a
+test data set.
 
 ```{r}
 xtest <- matrix(rnorm(20*2), ncol = 2)
 ytest <- sample(c(-1,1), 20, rep = TRUE)
 xtest[ytest == 1, ] = xtest[ytest == 1, ] + 1
 testdat <- data.frame(x = xtest, y = as.factor(ytest))
-
 ```
 
-
-Now, we predict the class labels of these test observations.  Here we use the best model obtained through cross-validation in order to make the predictions.
+Now, we predict the class labels of these test observations. Here we use the
+best model obtained through cross-validation in order to make the predictions.
 
 ```{r}
 ypred <- predict(bestmod, testdat)
 table(predict = ypred, truth = testdat$y)
 ```
 
-
-Thus, with this value of ``cost``, 17 of the test observations are classified correctly.  What if we had instead used ``cost = 0.01``?
+Thus, with this value of `cost`, 17 of the test observations are classified
+correctly. What if we had instead used `cost = 0.01`?
 
 ```{r}
 svmfit <- svm(y ~ ., data = dat, kernel = "linear", cost = 0.01,
@@ -119,17 +164,21 @@ ypred <- predict(svmfit, testdat)
 table(predict = ypred, truth = testdat$y)
 ```
 
-Now, 3 additional points are misclassified.  
+Now, 3 additional points are misclassified.
 
-Now consider a situation in which the two classes are linearly separable. Then, we can find a separating hyperplane using the ``svm()`` function.  We first further separate the two classes in our simulated data so that they are linearly separable.
+Now consider a situation in which the two classes are linearly separable. Then,
+we can find a separating hyperplane using the `svm()` function. We first further
+separate the two classes in our simulated data so that they are linearly
+separable.
 
 ```{r}
 x[y==1, ] <- x[y==1,] + 0.5
 plot(x, col = (y+5)/2, pch = 19)
 ```
 
-Now the observations are just barely linearly separable. We fit the support vector classifier and plot the resulting hyperplane, using a very large value of ``cost`` so that no observations are misclassified.
-
+Now the observations are just barely linearly separable. We fit the support
+vector classifier and plot the resulting hyperplane, using a very large value of
+`cost` so that no observations are misclassified.
 
 ```{r}
 dat <- data.frame(x = x, y = as.factor(y))
@@ -142,7 +191,11 @@ summary(svmfit)
 plot(svmfit, dat)
 ```
 
-No training errors were made and only three support vectors were used.  However, we can see from the figure that the margin is  narrow (because the observations that are not support vectors, indicated as circles, are close to the decision boundary).  It seems likely that this model will perform poorly on test data.  We now try with a smaller value of ``cost``:
+No training errors were made and only three support vectors were used. However,
+we can see from the figure that the margin is narrow (because the observations
+that are not support vectors, indicated as circles, are close to the decision
+boundary). It seems likely that this model will perform poorly on test data. We
+now try with a smaller value of `cost`:
 
 ```{r}
 svmfit <- svm(y~., data = dat, kernel = "linear",
@@ -151,12 +204,19 @@ summary(svmfit)
 plot(svmfit, dat)
 ```
 
-Using ``cost = 1``, we misclassify a training observation, but we also obtain a much wider margin and make use of seven support vectors. It seems likely that this model will perform better on test data than the model with ``cost = 1e5``.
-
+Using `cost = 1`, we misclassify a training observation, but we also obtain a
+much wider margin and make use of seven support vectors. It seems likely that
+this model will perform better on test data than the model with `cost = 1e5`.
 
 ## 9.2 Support Vector Machine
 
-In order to fit an SVM using a non-linear kernel, we again use the ``svm()`` function.  However, now we use a different value of the parameter ``kernel``. To fit an SVM with a polynomial kernel, we use ``kernel = "polynomial"`` and to fit an SVM with a radial kernel, we use ``kernel = "radial"``. In the former case we also use the ``degree`` argument to specify a degree for the polynomial kernel (this is the $d$ parameter in equation 9.22), and in the latter case, we use ``gamma`` to specify a value of $\gamma$ for the radial basis kernel.
+In order to fit an SVM using a non-linear kernel, we again use the `svm()`
+function. However, now we use a different value of the parameter `kernel`. To
+fit an SVM with a polynomial kernel, we use `kernel = "polynomial"` and to fit
+an SVM with a radial kernel, we use `kernel = "radial"`. In the former case we
+also use the `degree` argument to specify a degree for the polynomial kernel
+(this is the $d$ parameter in equation 9.22), and in the latter case, we use
+`gamma` to specify a value of $\gamma$ for the radial basis kernel.
 
 We first generate some data with a non-linear class boundary as follows:
 
@@ -175,8 +235,8 @@ We can plot the data to confirm that the class boundary is indeed non-linear:
 plot(x, col = y)
 ```
 
-
-The data is randomly split into training and testing groups.  We then fit the training data using the ``svm()`` function with a radial kernel and $\gamma = 1$:
+The data is randomly split into training and testing groups. We then fit the
+training data using the `svm()` function with a radial kernel and $\gamma = 1$:
 
 ```{r}
 train <- sample(200,100)
@@ -185,13 +245,17 @@ svmfit <- svm(y ~ ., data = dat[train,], kernel = "radial",
 plot(svmfit, dat[train,])
 ```
 
-The plot shows that the resulting SVM has a decidedly non-linear boundary. The ``summary()`` function can be used to obtain some information about the SVM fit:
+The plot shows that the resulting SVM has a decidedly non-linear boundary. The
+`summary()` function can be used to obtain some information about the SVM fit:
 
 ```{r}
 summary(svmfit)
 ```
 
-We can see from the figure that there are a fair number of training errors in the SVM fit.  If we increase the value of ``cost``, we can reduce the number of training errors. However, this comes at the prince of a more irregular decision boundary that seems to be at risk of overfitting the data.
+We can see from the figure that there are a fair number of training errors in
+the SVM fit. If we increase the value of `cost`, we can reduce the number of
+training errors. However, this comes at the prince of a more irregular decision
+boundary that seems to be at risk of overfitting the data.
 
 ```{r}
 svmfit <- svm(y ~ ., data = dat[train,], kernel = "radial",
@@ -199,7 +263,8 @@ svmfit <- svm(y ~ ., data = dat[train,], kernel = "radial",
 plot(svmfit, dat[train,])
 ```
 
-We can perform cross-validation using ``tune()`` to select the best choice of $\gamma$ and ``cost`` for an SVM with a radial kernel:
+We can perform cross-validation using `tune()` to select the best choice of
+$\gamma$ and `cost` for an SVM with a radial kernel:
 
 ```{r}
 set.seed(1)
@@ -210,8 +275,10 @@ tune.out <- tune(svm, y ~ ., data = dat[train, ],
 summary(tune.out)
 ```
 
-
-The best choice of parameters involves ``cost = 1`` and ``gamma = 2``. We can view the test set predictors for this model by applying the ``predict()`` function to the data.  Notice that to do this we subset the dataframe ``dat`` using ``-train`` as an index set.
+The best choice of parameters involves `cost = 1` and `gamma = 2`. We can view
+the test set predictors for this model by applying the `predict()` function to
+the data. Notice that to do this we subset the dataframe `dat` using `-train` as
+an index set.
 
 ```{r}
 tab <- table(true = dat[-train, "y"],
@@ -222,14 +289,30 @@ sum(diag(tab))/sum(tab) ## accuracy
 
 ## 9.3 ROC Curves
 
-The ``pROCR`` package can be used to produce ROC curves such as those in Figure 9.10 and 9.11.  We first write a short function to plot an ROC curve given a vector containing a numerical score for each observation, ``pred`` and a vector containing the class label for each observation, ``truth``. 
+The `pROCR` package can be used to produce ROC curves such as those in Figure
+9.10 and 9.11. We first write a short function to plot an ROC curve given a
+vector containing a numerical score for each observation, `pred` and a vector
+containing the class label for each observation, `truth`.
 
-
-SVMs and support vector classifiers output class labels for each observation.  However, it is also possible to obtain *fitted values* for each observation, which are the numerical scores used to obtain the class labels. For instance, in the case of a support vector classifier, the fitted value for an observation $X = (X_1, X_2, \ldots, X_p)^T$ takes the form $\hat{\beta_0} + \hat{\beta_1}X_1 + \hat{\beta_2}X_2 + \ldots + \hat{\beta}_p$.  For an SVM with a non-linear kernel, the equation that yields the fitted value here is given as:
+SVMs and support vector classifiers output class labels for each observation.
+However, it is also possible to obtain *fitted values* for each observation,
+which are the numerical scores used to obtain the class labels. For instance, in
+the case of a support vector classifier, the fitted value for an observation
+$X = (X_1, X_2, \ldots, X_p)^T$ takes the form
+$\hat{\beta_0} + \hat{\beta_1}X_1 + \hat{\beta_2}X_2 + \ldots + \hat{\beta}_p$.
+For an SVM with a non-linear kernel, the equation that yields the fitted value
+here is given as:
 
 $$f(x) = \beta_0 + \sum_{i\in S} \alpha_i K(x, x_i).$$
 
-In essence, the sign of the fitted value determines on which side of the decision boundary the observation lies.  Therefore, the relationship between the fitted value and the class prediction for a given observation is simple: if the fitted value exceeds zero then the observation is assigned to one class, and if it is less than zero then it is assigned to the other. In order to obtain the fitted values for a given SVM model fit, we can use ``decision.values = TRUE`` when fitting ``svm()``.  Then, the ``predict()`` function will output the fitted values.
+In essence, the sign of the fitted value determines on which side of the
+decision boundary the observation lies. Therefore, the relationship between the
+fitted value and the class prediction for a given observation is simple: if the
+fitted value exceeds zero then the observation is assigned to one class, and if
+it is less than zero then it is assigned to the other. In order to obtain the
+fitted values for a given SVM model fit, we can use `decision.values = TRUE`
+when fitting `svm()`. Then, the `predict()` function will output the fitted
+values.
 
 ```{r}
 svmfit.opt <- svm(y ~ ., data = dat[train,], kernel = "radial",
@@ -244,10 +327,7 @@ ROC_svm <- roc(dat[train, "y"], fitted)
 plot(ROC_svm)
 ```
 
-
-
 ```{r}
-
 svmfit.flex <- svm(y ~ ., data = dat[train, ], kernel = "radial",
                    gamma = 50, cost = 1, decision.values = TRUE)
 fitted <- attributes(predict(svmfit.flex, dat[train, ],
@@ -256,13 +336,14 @@ fitted <- attributes(predict(svmfit.flex, dat[train, ],
 
 Now we can produce the ROC plot:
 
-
 ```{r, message = FALSE, warning = FALSE}
 ROC_svm <- roc(dat[train, "y"], fitted)
 plot(ROC_svm)
 ```
 
-However, these ROC curves are all on the training data. We are really more interested in the level of prediction accuracy on the test data, the model with $\gamma = 2$ appears to provide the most accurate results.
+However, these ROC curves are all on the training data. We are really more
+interested in the level of prediction accuracy on the test data, the model with
+$\gamma = 2$ appears to provide the most accurate results.
 
 ```{r, warning = FALSE, message=FALSE}
 fitted <- attributes(predict(svmfit.opt, dat[-train, ],
@@ -280,7 +361,10 @@ legend("bottomright", legend = c("Opt", "Flex"),
 
 ## 9.4 SVM with Multiple Classes
 
-If the response is a factor containing more than two levels, then the ``svm()`` function will perform multi-class classification using the one-versus-one approach.  We explore that setting here by generating a third class of observations.
+If the response is a factor containing more than two levels, then the `svm()`
+function will perform multi-class classification using the one-versus-one
+approach. We explore that setting here by generating a third class of
+observations.
 
 ```{r}
 set.seed(1)
@@ -295,26 +379,140 @@ We can fit an SVM to this data:
 ```{r}
 svmfit <- svm(y ~ ., data = dat, kernel = "radial",
               cost = 10, gamma = 1)
-
-
 par(mfrow = c(1,1))
 plot(x, col = (y+1))
 plot(svmfit, dat)
 ```
 
-The ``e1071`` library can also be used to perform support vector regression, if the response vector that is passed to ``svm()`` is numerical rather than a factor.
+The `e1071` library can also be used to perform support vector regression, if
+the response vector that is passed to `svm()` is numerical rather than a factor.
 
 ## Problems
 
-In this problem, you will use support vector approaches in order to predict whether a given car gets high or low gas mileage based on the Auto data set.
+In this problem, you will use support vector approaches in order to predict
+whether a given car gets high or low gas mileage based on the Auto data set.
 
-(a) Create a binary variable that takes on a 1 for cars with gas mileage above the median, and a 0 for cars with gas mileage below the median.
+(a) Create a binary variable that takes on a 1 for cars with gas mileage above
+    the median, and a 0 for cars with gas mileage below the median.
 
-(b) Fit a support vector classifier to the data with various values of cost, in order to predict whether a car gets high or low gas mileage. Report the cross-validation errors associated with different values of this parameter. Comment on your results.
+    ```{r}
+    library(ISLR)
+    data("Auto")
+    attach(Auto)
+    ```
 
-(c) Now repeat (b), this time using SVMs with radial and polynomial basis kernels, with different values of gamma and degree and cost. Comment on your results.
+    ```{r}
+    median <- median(mpg)
+    Auto$above_median <- ifelse(mpg > median, 1, 0)
+    Auto$above_median <- as.factor(Auto$above_median)
+    head(Auto)
+    ```
+
+(b) Fit a support vector classifier to the data with various values of cost, in
+    order to predict whether a car gets high or low gas mileage. Report the
+    cross-validation errors associated with different values of this parameter.
+    Comment on your results.
+
+    ```{r}
+    set.seed(1)
+    tune.out <- tune(svm, above_median ~ ., data = Auto, kernel = "linear",
+                     ranges = list(cost = c(0.001, 0.01, 0.1,
+                                            1, 5, 10, 100)))
+    ```
+
+    ```{r}
+    summary(tune.out)
+    ```
+
+    ```{r}
+    bestmod.linear <- tune.out$best.model
+    summary(bestmod.linear)
+    ```
+
+    After performing the CV, we find that that `cost = 1` results in the lowest
+    cross-validation error rate, which is 0.01025641.
+
+(c) Now repeat (b), this time using SVMs with radial and polynomial basis
+    kernels, with different values of gamma and degree and cost. Comment on your
+    results.
+
+    ```{r}
+    # radial
+    set.seed(1)
+    tune.out <- tune(svm, above_median ~ ., data = Auto,
+                     kernel = "radial", 
+                     ranges = list(cost = c(0.1, 1, 10, 100, 1000),
+                                   gamma = c(0.5, 1, 2, 3, 4)))
+    summary(tune.out)
+    ```
+
+    ```{r}
+    bestmod.radial <- tune.out$best.model
+    summary(bestmod.radial)
+    ```
+
+    For the Radial Kernel, we find that `cost = 10` and `gamma = 0.5` result in
+    the lowest cross-validation error rate, which is 0.04865385.
+
+    ```{r}
+    # polynomial
+    set.seed(1)
+    tune.out <- tune(svm, above_median ~ ., data = Auto,
+                     kernel = "polynomial", 
+                     ranges = list(cost = c(0.1, 1, 10, 100, 1000),
+                                   degree = c(1, 2, 3),
+                                   gamma = c(0.5, 1, 2, 3, 4)))
+    summary(tune.out)
+    ```
+
+    ```{r}
+    bestmod.poly <- tune.out$best.model
+    summary(bestmod.poly)
+    ```
+
+    For the Polynomial Kernel, we find that `cost = 1`, `degree = 1`, and
+    `gamma = 1`, result in the lowest cross-validation error rate, which is
+    0.01025641.
 
 (d) Make some plots to back up your assertions in (b) and (c).
 
-Hint: In the lab, we used the plot() function for svm objects only in cases with p = 2. When p > 2, you can use the plot() function to create plots displaying pairs of variables at a time. Essentially, instead of typing ``> plot(svmfit , dat)`` where svmfit contains your fitted model and dat is a data frame containing your data, you can type ``> plot(svmfit , dat , x1∼x4)`` in order to plot just the first and fourth variables. However, you must replace x1 and x4 with the correct variable names. To find
-out more, type ``?plot.svm``.
+    ```{r}
+    # linear
+    svmfit.linear <- svm(above_median~., 
+                         data = Auto, 
+                         kernel = "linear",
+                         cost = 1)
+    summary(svmfit.linear)
+    plot(svmfit.linear, Auto,  horsepower ~ weight)
+    ```
+
+    ```{r}
+    # radial
+    svmfit.radial <- svm(above_median~., 
+                         data = Auto, 
+                         kernel = "radial",
+                         cost = 10,
+                         gamma = 0.5)
+    summary(svmfit.radial)
+    plot(svmfit.radial, Auto,  horsepower ~ weight)
+    ```
+
+    ```{r}
+    # polynomial
+    svmfit.poly <- svm(above_median~., 
+                         data = Auto, 
+                         kernel = "radial",
+                         cost = 1,
+                         gamma = 1,
+                         d = 1)
+    summary(svmfit.poly)
+    plot(svmfit.poly, Auto,  horsepower ~ weight)
+    ```
+
+Hint: In the lab, we used the plot() function for svm objects only in cases with
+p = 2. When p \> 2, you can use the plot() function to create plots displaying
+pairs of variables at a time. Essentially, instead of typing
+`> plot(svmfit , dat)` where svmfit contains your fitted model and dat is a data
+frame containing your data, you can type `> plot(svmfit , dat , x1∼x4)` in order
+to plot just the first and fourth variables. However, you must replace x1 and x4
+with the correct variable names. To find out more, type `?plot.svm`.
